Fixed modal bugs and layout issues at intermediate device sizes

--- a/src/Pages/Navbar/Navbar.css
+++ b/src/Pages/Navbar/Navbar.css
@@ -40,20 +40,23 @@
         background: white;
         margin: 0;
         margin-top: -30px;
-        padding: 10px;
+        padding-top: 10px;
     }
 
     .modal-main {
         background: white;
+        padding-left: 10vw;
+        padding-right: 10vw;
     }
 
     .modal-list {
         padding-top: 50px;
+        padding-left: 0;
         list-style: none;
     }
 
     .modal-item {
-        width: 80vw;
+        width: 100%;
         font-family: 'Avenir Next';
         color: black;
         font-size: 18px;
@@ -62,6 +65,10 @@
         padding-bottom: 20px;
         border-bottom: 1px solid #6B6B6B;
         cursor: pointer;
+    }
+
+    .menu {
+        display: block;
     }
 }
 
@@ -85,6 +92,10 @@
         float: left;
     }
 
+    .brand {
+        display: none;
+    }
+
     .social-container {
         margin-right: 20px;
         margin-top: 15px;
@@ -95,6 +106,43 @@
         font-size: 0px;
         visibility: hidden;
         display: none;
+    }
+
+    .modal-backdrop {
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        margin: 0;
+        margin-top: -30px;
+        padding-top: 10px;
+    }
+
+    .modal-main {
+        background: white;
+        padding-left: 10vw;
+        padding-right: 10vw;
+    }
+
+    .modal-list {
+        padding-top: 50px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .modal-item {
+        width: 100%;
+        font-family: 'Avenir Next';
+        color: black;
+        font-size: 18px;
+        font-weight: 400;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #6B6B6B;
+        cursor: pointer;
+    }
+
+    .menu {
+        display: block;
     }
 }
 
@@ -118,6 +166,10 @@
         float: left;
     }
 
+    .brand {
+        display: none;
+    }
+
     .social-container {
         margin-right: 20px;
         margin-top: 10px;
@@ -128,6 +180,43 @@
         font-size: 2px;
         visibility: hidden;
         display: none;
+    }
+
+    .modal-backdrop {
+        width: 100vw;
+        height: 100vh;
+        background: white;
+        margin: 0;
+        margin-top: -30px;
+        padding-top: 10px;
+    }
+
+    .modal-main {
+        background: white;
+        padding-left: 10vw;
+        padding-right: 10vw;
+    }
+
+    .modal-list {
+        padding-top: 50px;
+        padding-left: 0;
+        list-style: none;
+    }
+
+    .modal-item {
+        width: 100%;
+        font-family: 'Avenir Next';
+        color: black;
+        font-size: 18px;
+        font-weight: 400;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        border-bottom: 1px solid #6B6B6B;
+        cursor: pointer;
+    }
+
+    .menu {
+        display: block;
     }
 }
 
@@ -179,6 +268,26 @@
             font-size: 16px;
             transition: 0.5s;
         }
+
+    .menu {
+        display: none;
+    }
+
+    .modal-backdrop {
+        display: none;
+    }
+
+    .modal-main {
+        display: none;
+    }
+
+    .modal-list {
+        display: none;
+    }
+
+    .modal-item {
+        display: none;
+    }
 }
 
 @media only screen and (min-width: 84em) {
@@ -228,6 +337,26 @@
         margin-top: -20px;
         width: 10%;
         margin-left: 100%;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .modal-backdrop {
+        display: none;
+    }
+
+    .modal-main {
+        display: none;
+    }
+
+    .modal-list {
+        display: none;
+    }
+
+    .modal-item {
+        display: none;
     }
 }
 
